@startuml

!theme plain

class Artwork {
  - id: Optional[int]
  - title: str
  - artist: str
  - year: int
  - style: str
  - price: float
  - created_at: str
  + validate(): void
  + __str__(): str
}

class DatabaseManager {
  - db_name: str
  - logger: Logger
  + __init__(db_name: str)
  + setup_database(): void
  + setup_logging(): void
  + add_artwork(artwork: Artwork): int
  + get_all_artworks(): List[Artwork]
}

class ArtGalleryError {
  <<Exception>>
}

class ValidationError {
  <<Exception>>
}

class DatabaseError {
  <<Exception>>
}

class ArtworkTable {
  - db: DatabaseManager
  - table: QTableWidget
  + __init__()
  + init_ui(): void
  + load_data(): void
}

class InputForm {
  - db: DatabaseManager
  - table_widget: ArtworkTable
  + __init__(table_widget)
  + init_ui(): void
  + add_artwork(): void
  + clear_form(): void
}

class StatisticsWidget {
  - db: DatabaseManager
  + __init__()
  + init_ui(): void
}

class MainWindow {
  - db: DatabaseManager
  - table_widget: ArtworkTable
  - input_form: InputForm
  + __init__()
  + init_ui(): void
  + show_about(): void
}

DatabaseManager --> Artwork : manages
ValidationError --|> ArtGalleryError
DatabaseError --|> ArtGalleryError
ArtworkTable --> DatabaseManager : uses
InputForm --> DatabaseManager : uses
InputForm --> ArtworkTable : updates
MainWindow --> ArtworkTable : contains
MainWindow --> InputForm : contains

@enduml